<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_template"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton

        android:id="@+id/reg_movie_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:text="@string/register_movie"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ratings_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/rate_movie"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_movie_button"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_movie_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:text="@string/search_movie"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_movies_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_movies_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/edit_movies"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favourites_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="44dp"
        android:text="@string/favourites"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_movies_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/display_movies_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/display_movies"
        android:textSize="18sp"
        app:backgroundTint="#FFAB40"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_movie_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>