<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">


<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background_template">


        <EditText
            android:id="@+id/alertDialog_title"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_1"
            android:drawableLeft="@drawable/ic_movie_icon"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/alertDialog_year"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_1"
            android:drawableLeft="@drawable/ic_movie_year"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/year"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertDialog_title"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/alertDialog_director"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_1"
            android:drawableLeft="@drawable/ic_movie_person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/director"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertDialog_year"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/alertDialog_actors"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_1"
            android:drawableLeft="@drawable/ic_movie_actors"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/actors_actresses"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertDialog_director"
            tools:ignore="RtlHardcoded" />

        <RatingBar
            android:id="@+id/alertbox_rating"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="false"
            android:numStars="10"
            android:progressBackgroundTint="#CDCDCA"
            android:progressTint="@color/duskYellow"
            android:rating="10"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertDialog_actors" />

        <EditText
            android:id="@+id/alertDialog_review"
            android:layout_width="310dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_1"
            android:drawableLeft="@drawable/ic_rate_review"
            android:drawablePadding="15dp"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/review"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertbox_rating"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/favourite_movie_spinner"
            android:layout_width="310dp"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertDialog_review" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateMovie_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="148dp"
            android:layout_height="68dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/update"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#FFAB40"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelUpdate_buttob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourite_movie_spinner"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelUpdate_buttob"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="148dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"

            android:layout_marginRight="52dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#FFAB40"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toEndOf="@+id/updateMovie_button"
            app:layout_constraintTop_toBottomOf="@+id/favourite_movie_spinner"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>